# engineBack

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  myxfml_datamodel.drawio
.github/workflows/: publishToPages.yml  runTests.yml
SampleProject/: test_main.cpp
Src/: Engine.cpp
Src/config/: XmlEngine.cpp  XmlEntity.cpp
Src/scene/: Scene.cpp
Src/utilities/: Time.cpp
clion-utilities/: CMakeLists.txt
cmake/: FindMyxmlpp.cmake
design/Scripts/: DummyScript.cpp
design/config/: XmlEntity.cpp
design/core_engine/: Engine.cpp  main.cpp
design/include/: Component.hpp  Engine.hpp  IComponentInitializer.hpp  Polymorph.hpp  XmlComponent.hpp
include/: Attribute.hpp  Doc.hpp  myxmlpp.hpp
include/ComponentsFactory/: AComponentInitializer.hpp  ComponentFactory.hpp  ComponentInitializer.hpp  IComponentInitializer.hpp
include/Config/: XmlComponent.hpp  XmlEntity.hpp  XmlScene.hpp
include/Core/: Engine.hpp  SplashScreen.hpp
include/DynamicLoader/: DynamicLoader.hpp
include/Engine/: Application.hpp  Engine.hpp  SceneManager.hpp
include/Events/: IButtonHandler.hpp  ICollider2dHandler.hpp  ICollider3dHandler.hpp  IDragHandler.hpp  IDropHandler.hpp  IInputFieldHandler.hpp  IPointerHandler.hpp
include/Exceptions/: ConfigurationException.hpp  ExceptionLogger.hpp  GraphicalException.hpp
include/GraphicalAPI/: Color.hpp  Display.hpp  DisplayModule.hpp  DynamicLoader.hpp  GraphicalAPI.hpp  Input.cpp  Input.hpp  Sprite.hpp  SpriteModule.hpp  Text.hpp  TextModule.hpp
include/Log/: Logger.hpp
include/Plugins/: AssetManager.hpp  DynamicLoader.hpp  IPlugin.hpp  PluginManager.hpp  Symbols.hpp
include/Polymorph/: Components.hpp  Config.hpp  Core.hpp  Debug.hpp  Events.hpp  Factory.hpp  Plugins.hpp  Settings.hpp  Types.hpp
include/ScriptingAPI/: ASerializableObject.hpp  IScriptFactory.hpp  ISerializableObjectFactory.hpp  ScriptFactory.hpp  ScriptingApi.hpp
include/Scripts/: DummyScript.hpp
include/Utilities/: InstanceStore.hpp  Time.hpp  is_builtin.hpp  safe_ptr.hpp  uuid.hpp
include/engine/: Engine.hpp  IPolymorphDisplay.hpp  IPolymorphEvent.hpp  Polymorph.hpp  SceneManager.hpp
include/exceptions/: AttributeNotFoundException.hpp  Exception.hpp  IllegalValueException.hpp  ParsingException.hpp  PermissionDeniedException.hpp
include/polymorph/: Config.hpp  Core.hpp  Plugins.hpp  Settings.hpp
lib/myxmlpp/: CMakeLists.txt
old_components_icl/: ACollider2d.hpp  ACollider3d.hpp  ADrawable2dComponent.hpp  ADrawable3dComponent.hpp  ADrawableComponent.hpp  CameraComponent.hpp  FACTORY_ICLS.hpp
old_components_icl/animation/: MeshAnimation.hpp  MeshFrame.hpp  SpriteAnimation.hpp
old_components_icl/colliders/: BoxCollider.hpp  ColliderCircle2d.hpp  ColliderMesh3d.hpp  ColliderRect2d.hpp  ColliderSphere3d.hpp
old_components_icl/drawables/: BoxRendererComponent.hpp  MeshRendererComponent.hpp  SphereRendererComponent.hpp  SpriteRendererComponent.hpp  TextRendererComponent.hpp
old_components_icl/initializers/: BoxColliderInitializer.hpp  CameraInitializer.hpp  ColliderCircle2dInitializer.hpp  ColliderMesh3dInitializer.hpp  HorizontalGroupLayoutInitializer.hpp  MeshAnimatorInitializer.hpp  MeshRendererInitializer.hpp  MusicPlayerInitializer.hpp  SphereRendererInitializer.hpp  VerticalGroupLayoutInitializer.hpp
old_components_icl/sound/: MusicPlayerComponent.hpp  SoundPlayerComponent.hpp
old_components_icl/ui/: ButtonComponent.hpp  CanvasComponent.hpp  HorizontalGroupLayoutComponent.hpp  InputFieldComponent.hpp  VerticalGroupLayoutComponent.hpp
old_components_src/: ADrawable2dComponent.cpp  ADrawable3dComponent.cpp  ADrawableComponent.cpp  CameraComponent.cpp
old_components_src/animation/: MeshAnimation.cpp  MeshAnimatorComponent.cpp  MeshFrame.cpp  MonoMeshAnimatorComponent.cpp  SpriteAnimation.cpp  SpriteAnimatorScript.cpp
old_components_src/colliders/: BoxCollider.cpp  ColliderCircle2d.cpp  ColliderMesh3d.cpp  ColliderRect2d.cpp  ColliderSphere3d.cpp
old_components_src/drawables/: BoxRendererComponent.cpp  SphereRendererComponent.cpp
old_components_src/initializers/: BoxRendererInitalizer.cpp  ButtonInitializer.cpp  CameraInitalizer.cpp  ColliderMesh3dInitializer.cpp  ColliderSphere3dInitializer.cpp  SphereRendererInitalizer.cpp  SpriteAnimatorInitializer.cpp  SpriteRendererInitalizer.cpp  TextRendererInitializer.cpp  VerticalGroupLayoutInitializer.cpp
old_components_src/sound/: MusicPlayerComponent.cpp  SoundPlayerComponent.cpp
old_components_src/ui/: ButtonComponent.cpp  CanvasComponent.cpp  (+3 more)
old_modules/: GraphicalAPI.hpp  MODULES INCLUDE.hpp  SplashScreen.cpp  SplashScreen.hpp  old_logic.cpp
src/: Attribute.cpp  Doc.cpp  DynamicLoader.cpp  Engine.cpp  Logger.cpp
tests/: test.cpp
(+484 files in other folders)
